ckanext/matolabtheme/assets/style.css
@charset "UTF-8";

/*!
 * Bootstrap v5.1.3 (https://getbootstrap.com/)
 * Copyright 2011-2022The Bootstrap Authors
 * Copyright 2011-2022 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 *
 * Bootstrap-Dark v1.1.3 (https://vinorodrigues.github.io/bootstrap-dark-5/)
 * Copyright 2020-2022 Vino Rodrigues
 * This version is a dual color theme, with the default light mode and the dark
 * elements optioned in by a `prefers-color-scheme: dark` media query
 */
:root {
  color-scheme: light dark;
}

:root {
  --bs-primary: #005b7f;
  --bs-secondary: #a6bbc8;
  --bs-success: #179C7d;
  --bs-info: #f58220;
  --bs-warning: #b2d235;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212529;
  --bs-primary-rgb: 0, 91, 127;
  --bs-secondary-rgb: 166, 187, 200;
  --bs-success-rgb: 23, 156, 125;
  --bs-info-rgb: 245, 130, 32;
  --bs-warning-rgb: 178, 210, 53;
  --bs-danger-rgb: 220, 53, 69;
  --bs-light-rgb: 248, 249, 250;
  --bs-dark-rgb: 33, 37, 41;
  --bs-white-rgb: 255, 255, 255;
  --bs-black-rgb: 0, 0, 0;
  --bs-body-color-rgb: 33, 37, 41;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
  --bs-body-font-family: var(--bs-font-sans-serif);
  --bs-body-font-size: 1rem;
  --bs-body-font-weight: 400;
  --bs-body-line-height: 1.5;
  --bs-body-color: #212529;
  --bs-body-bg: #fff;
  --bs-lightgray: #cccccc;

}

@media (prefers-color-scheme: dark) {
  :root {
    --bs-white: #fafafa;
    --bs-black: #111;
    --bs-gray: #7e7e7e;
    --bs-primary: #375a7f;
    --bs-secondary: #4e6c7e;
    --bs-light: #2a333c;
    --bs-primary-rgb: 55, 90, 127;
    --bs-secondary-rgb: 78, 108, 126;
    --bs-light-rgb: 42, 51, 60;
    --bs-body-bg-rgb: 34, 34, 34;
    --bs-body-color: #a6bbc8;
    --bs-body-bg: #222;
  }
}



*,
*::before,
*::after {
  box-sizing: border-box;
}

@media (prefers-reduced-motion: no-preference) {
  :root {
    scroll-behavior: smooth;
  }
}

body {
  margin: 0;
  font-family: var(--bs-body-font-family);
  font-size: var(--bs-body-font-size);
  font-weight: var(--bs-body-font-weight);
  line-height: var(--bs-body-line-height);
  color: var(--bs-body-color);
  text-align: var(--bs-body-text-align);
  background-color: rgba(var(--bs-body-bg-rgb), 1.0);
  -webkit-text-size-adjust: 100%;
}


.main {
  background: none;
}

.bg-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(var(--bs-body-bg-rgb) 0.5);
  /* change the alpha value as needed */
  z-index: -1;
  /* background-size:100% 100%; */
  mix-blend-mode: multiply;
  opacity: 0.05;
}

a {
  color: var(--bs-primary);
  text-decoration: none;
}

a:hover {
  color: var(--bs-primary) !important;
  text-decoration: underline;
}

.module-narrow .nav-item>a,
.module-narrow .nav-aside li a {
  color: var(--bs-body-color);
}

.dataset-heading a {
  color: inherit;
}

.homepage .module-promotion {
  background: var(--bs-light);
}

.banner {
  background-size: 100% 100%;
}

.navbar-nav li a {
  display: block;
  width: 100%;
  padding: 0.25rem 1rem;
  clear: both;
  font-weight: 400;
  text-align: inherit;
  white-space: nowrap;
  background-color: transparent;
  border: 0;
  padding: 0.5rem 0.5rem;
  color: var(--bs-light);
}

.dropdown-menu {
  background-color: var(--bs-body-bg) !important;
}



.dropdown-menu li a {
  color: var(--bs-body-color);
}



aside {
  background: var(--bs-light);
}

.page-row {
  background-color: rgba(var(--bs-light-rgb), 1.0);
}


.theme-counter {
  display: inline;
}

.invisible {
  visibility: hidden;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.popup {
  animation-duration: 2s;
  animation-fill-mode: both;
  animation-name: fadeIn;
}


.editor .editor-info-block {
  background-color: var(--bs-secondary);
  color: var(--bs-light);
}


.form-switch .form-check-input,
.form-switch .form-check-input:checked {
  background-color: rgba(var(--bs-primary-rgb), 0.7);
  border-color: var(--bs-primary);
}

.module-heading {
  color: var(--bs-body-color);
  background-color: rgba(var(--bs-body-bg-rgb), 0.4);
}

.module {
  background-color: rgba(var(--bs-light-rgb), 0.6);
}

.page-header {
  background-color: rgba(var(--bs-light-rgb), 0.6);
}

.nav-tabs .nav-link.active,
.nav-tabs .nav-item.show .nav-link {
  color: var(--bs-dark);
  background-color: rgba(var(--bs-light-rgb), 0.2) !important;
  border-color: #dee2e6 #dee2e6 #fff;
}


.counter-row {
  background-color: rgba(var(--bs-light-rgb), 0.1) !important;
}


.counter-link,
.counter-link>a:hover {
  display: block;
  padding: 0.5rem 1rem;
  color: var(--bs-primary);
  text-decoration: none;
}

.resource-item:hover {
  background-color: rgba(var(--bs-primary-rgb), 0.2);
}

.js .table-toggle-more .toggle-seperator td {
  height: 11px;
  padding: 0;
  mix-blend-mode: multiply;
}

.slug-preview-value {
  background-color: var(--bs-light-rgb);
  color: var(--bs-info);
}


.site-footer {
  background-size: 100% 100%;
  /* mix-blend-mode: multiply; */
  padding: 20px 0;
}

.site-footer a,
.site-footer .attribution p,
.site-footer label {
  color: var(--bs-light) !important;
}


.page-header .nav-tabs li.active a,
.page-header .nav-tabs a:hover {
  background-color: var(--bs-light);
}

.nav-link,
.page-header .nav-tabs li a {
  color: var(--bs-primary);
}

.media-grid,
.module-grid {
  background: rgba(var(--bs-light-rgb), 0.2);
}

.module-footer {
  background-color: var(--bs-light);
}

.main .primary {
  background-color: var(--bs-light);
}

.badge[data-format=csv],
.badge[data-format*=csv] {
  background-color: var(--bs-info);
}

.badge[data-format=json],
.badge[data-format*=json] {
  background-color: var(--bs-warning);
}

.badge[data-format=pdf],
.badge[data-format*=pdf] {
  background-color: var(--bs-danger);
}

.badge[data-format=rdf],
.badge[data-format*=rdf],
.badge[data-format*=nquad],
.badge[data-format*=ntriples],
.badge[data-format*=turtle] {
  background-color: var(--bs-primary);
}

.badge[data-format=zip],
.badge[data-format*=zip] {
  background-color: var(--bs-secondary);
}

.form-control {
  border: 1px solid var(--bs-secondary);
}

.controls>.form-control,
.input-group>.form-control,
.input-group>.form-select {
  color: var(--bs-body-color);
  background-color: var(--bs-body-bg);
}

.search-form .control-order-by .form-control {
  color: var(--bs-light);
  background-color: var(--bs-body-bg);

}

.select2-container .select2-choice {
  color: inherit !important;
  border-radius: 4px;
  background-color: var(--bs-body-bg);
  /* background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%); */
  /* background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%); */
  background-image: linear-gradient(to top, var(--bs-light) 0%, var(--bs-body-bg) 50%) !important;
}

.select2-container-multi.select2-container .select2-choices {
  color: inherit;
  background-color: var(--bs-body-bg);
}

.select2-drop-mask {
  background: var(--bs-body-bg);
  color: inherit;
}

.select2-container .select2-choice {
  background-color: var(--bs-body-bg);
  color: inherit;
}

.select2-search .select2-drop {
  background: var(--bs-body-bg);
  color: inherit;
}

.select2-choice {
  background-color: var(--bs-body-bg);
  color: inherit;
}

.select2-search {
  background-color: var(--bs-body-bg);
  color: inherit;
}

.select2-search input {
  background-color: var(--bs-body-bg);
  color: inherit;
}

.select2-results {
  background-color: var(--bs-body-bg);
  color: var(--bs-body-color);
}

.btn {
  color: var(--bs-light);
}

.btn-outline-light {
  color: var(--bs-light);
  border-color: var(--bs-light);
}


.btn-light,
.btn-default {
  color: var(--bs-body-color);
  background-color: var(--bs-light);
  border-color: var(--bs-secondary);
}

.badge {
  color: var(--bs-body-color);
}

.tag-list {
  background-color: rgba(var(--bs-body-bg));
}

.tag {
  color: var(--bs-light);
  background-color: var(--bs-primary);
  border: var(--bs-primary);
  box-shadow: inset 0 1px 0 rgba(var(--bs-body-color-rgb), 0.15), 0 1px 1px rgba(var(--bs-body-bg-rgb), 0.075);
}

.table {
  --bs-table-bg: transparent;
  --bs-table-accent-bg: transparent;
  --bs-table-striped-color: var(--bs-body-color);
  --bs-table-striped-bg: rgba(var(--bs-primary-rgb), 0.2);
  /* --bs-table-active-color: #212529; */
  /* --bs-table-active-bg: rgba(0, 0, 0, 0.1); */
  /* --bs-table-hover-color: #212529; */
  /* --bs-table-hover-bg: rgba(0, 0, 0, 0.075); */
  /* width: 100%; */
  /* margin-bottom: 1rem; */
  color: var(--bs-body-color);
  /* vertical-align: top; */
  /* border-color: #dee2e6; */
}

.tab-content>.tab-pane {
  display: none;
}

.tab-content>.active {
  display: block;
}


/*
 * ---------- Dark Mode ------------------------------------------------------
 */
@media (prefers-color-scheme: light) {
  .d-light-inline {
    display: inline !important;
  }

  .d-light-inline-block {
    display: inline-block !important;
  }

  .d-light-block {
    display: block !important;
  }

  .d-light-grid {
    display: grid !important;
  }

  .d-light-table {
    display: table !important;
  }

  .d-light-table-row {
    display: table-row !important;
  }

  .d-light-table-cell {
    display: table-cell !important;
  }

  .d-light-flex {
    display: flex !important;
  }

  .d-light-inline-flex {
    display: inline-flex !important;
  }

  .d-light-none {
    display: none !important;
  }
}

@media (prefers-color-scheme: dark) {
  .d-dark-inline {
    display: inline !important;
  }

  .d-dark-inline-block {
    display: inline-block !important;
  }

  .d-dark-block {
    display: block !important;
  }

  .d-dark-grid {
    display: grid !important;
  }

  .d-dark-table {
    display: table !important;
  }

  .d-dark-table-row {
    display: table-row !important;
  }

  .d-dark-table-cell {
    display: table-cell !important;
  }

  .d-dark-flex {
    display: flex !important;
  }

  .d-dark-inline-flex {
    display: inline-flex !important;
  }

  .d-dark-none {
    display: none !important;
  }

  .tag {
    color: var(--bs-body-color);
  }

  .btn {
    color: var(--bs-light);
  }

}

/*# sourceMappingURL=bootstrap-dark.css.map */

